[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/interactable/initial/destructable_interactable.gd" type="Script" id=1]
[ext_resource path="res://scenes/env/animated_light.tscn" type="PackedScene" id=2]

[node name="DestructableInteractable" type="Area2D"]
collision_layer = 8
collision_mask = 0
script = ExtResource( 1 )

[node name="Texture" type="Sprite" parent="."]

[node name="Collision" type="CollisionShape2D" parent="."]

[node name="Animation" type="AnimationPlayer" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="Light" parent="." instance=ExtResource( 2 )]

[connection signal="area_entered" from="." to="." method="on_area_entered"]
[connection signal="animation_finished" from="Animation" to="." method="on_animation_finished"]
